Fix experience page layout in ie 10.

--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -33,13 +33,15 @@
       <div class="info">
         <div class="info__content">
 
-          <a
-            href="/experience"
-            id="experience-default-link"
-            class="title state__link state"
-          >
-            {{page.text_title}}
-          </a>
+          <div>
+            <a
+              href="/experience"
+              id="experience-default-link"
+              class="title state__link state"
+            >
+              {{page.text_title}}
+            </a>
+          </div>
 
           <div class="links">
             <a
