Update client portal link

--- a/_includes/nav-modal.html
+++ b/_includes/nav-modal.html
@@ -59,7 +59,7 @@
 				</a>
 
 				<a
-					href="https://ws.onehub.com/"
+					href="https://clientportal.groundsource.net/"
 					target="_blank"
 				>
 					<span>
