--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -88,7 +88,7 @@
           </li>
 
           <li>
-            <a href="https://ws.onehub.com/" target="_blank">
+            <a href="https://clientportal.groundsource.net/" target="_blank">
               CLIENT ACCESS
             </a>
           </li>
