--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
       </a>
 
       <a
-        href="https://ws.onehub.com/" target="_blank"
+        href="https://clientportal.groundsource.net/" target="_blank"
         class="title link"
       >
         CLIENT ACCESS
